--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimaryDark"
-    tools:context="summerresearch.iui.ku.autocompletiondemo.MainActivity">
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
 
     <FrameLayout
-        android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
+        android:layout_height="1060dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/frameLayout" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HEY!!!"
+        android:id="@+id/textView"
         android:layout_alignParentBottom="true"
-        android:background="#FFFF">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/frameLayout"
+        android:layout_toLeftOf="@+id/button"
+        android:layout_toStartOf="@+id/button" />
 
-        <TextView
-            android:layout_width="276dp"
-            android:layout_height="62dp"
-            android:text="here"
-            android:paddingLeft="8dp"
-            android:id="@+id/probabilitiesText"
-            android:layout_gravity="left|bottom" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/textView" />
 
-        <Button
-            android:layout_width="83dp"
-            android:layout_height="70dp"
-            android:text="Send"
-            android:id="@+id/sendButton"
-            android:layout_gravity="right|bottom"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/colorWhite"/>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"></FrameLayout>
-    </FrameLayout>
 </RelativeLayout>
