--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorLightGrey">#E0E0E0</color>
     <color name="colorPrimary">#9098c4</color>
     <color name="colorPrimaryDark">#4d5270</color>
     <color name="colorAccent">#FF4081</color>
