--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,58 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:paddingBottom="8dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="left|top"
+        android:layout_alignParentTop="true"/>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:id="@+id/imageView2"
+        android:layout_below="@+id/imageView"/>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:id="@+id/imageView3"
+        android:layout_below="@+id/imageView2"/>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:id="@+id/imageView4"
+        android:layout_below="@+id/imageView3"/>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:id="@+id/imageView5"
+        android:layout_below="@+id/imageView4"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="630dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:id="@+id/frameLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/imageView"
         android:paddingRight="5dp"
         android:paddingLeft="5dp"
-        android:background="@color/colorWhite"/>
+        android:background="@color/colorWhite">
+
+    </FrameLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,5 +81,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="send"/>
+
+
 
 </RelativeLayout>
