--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:paddingBottom="8dp"
         android:id="@+id/imageView"
         android:layout_gravity="left|top"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:onClick="imageClicked"/>
 
     <ImageView
         android:layout_width="120dp"
@@ -21,7 +22,8 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:id="@+id/imageView2"
-        android:layout_below="@+id/imageView"/>
+        android:layout_below="@+id/imageView"
+        android:onClick="imageClicked"/>
 
     <ImageView
         android:layout_width="120dp"
@@ -29,7 +31,8 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:id="@+id/imageView3"
-        android:layout_below="@+id/imageView2"/>
+        android:layout_below="@+id/imageView2"
+        android:onClick="imageClicked"/>
 
     <ImageView
         android:layout_width="120dp"
@@ -37,7 +40,8 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:id="@+id/imageView4"
-        android:layout_below="@+id/imageView3"/>
+        android:layout_below="@+id/imageView3"
+        android:onClick="imageClicked"/>
 
     <ImageView
         android:layout_width="120dp"
@@ -45,7 +49,8 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:id="@+id/imageView5"
-        android:layout_below="@+id/imageView4"/>
+        android:layout_below="@+id/imageView4"
+        android:onClick="imageClicked"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -57,6 +62,12 @@
         android:paddingRight="5dp"
         android:paddingLeft="5dp"
         android:background="@color/colorWhite">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:id="@+id/imageView6"/>
 
     </FrameLayout>
 
@@ -81,7 +92,5 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="send"/>
-
-
 
 </RelativeLayout>
