--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,11 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorWhite"
     tools:context=".MainActivity">
 
     <ImageView
+        android:layout_marginTop="50dp"
         android:layout_width="120dp"
         android:layout_height="100dp"
         android:id="@+id/imageView"
@@ -19,7 +20,8 @@
         android:layout_height="30dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
+        android:gravity="center"
         android:id="@+id/textView1"
         android:layout_below="@+id/imageView"/>
 
@@ -35,7 +37,8 @@
         android:layout_height="30dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:textColor="@color/colorWhite"
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textView2"
         android:layout_below="@+id/imageView2" />
 
@@ -51,7 +54,8 @@
         android:layout_height="30dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:textColor="@color/colorWhite"
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textView3"
         android:layout_below="@+id/imageView3" />
 
@@ -67,7 +71,8 @@
         android:layout_height="30dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:textColor="@color/colorWhite"
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textView4"
         android:layout_below="@+id/imageView4" />
 
@@ -83,13 +88,14 @@
         android:layout_height="30dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:textColor="@color/colorWhite"
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/textView5"
         android:layout_below="@+id/imageView5" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="630dp"
+        android:layout_height="match_parent"
         android:id="@+id/frameLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -106,26 +112,22 @@
             android:id="@+id/imageView6"/>
     </FrameLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:text="HEY!!!"
-        android:textColor="@color/colorWhite"
-        android:id="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/send"
-        android:layout_toStartOf="@+id/send"
-        android:layout_below="@+id/textView5"/>
+    <at.markushi.ui.CircleButton
+        android:layout_width="64dip"
+        android:layout_height="64dip"
+        android:id="@+id/ip"
+        android:layout_above = "@+id/draw"
+        android:layout_alignParentRight="true"
+        android:onClick="setip"
+        android:src="@mipmap/ic_done_white_24dp"
+        app:cb_color="#000000"/>
 
     <at.markushi.ui.CircleButton
         android:layout_width="64dip"
         android:layout_height="64dip"
         android:id="@+id/send"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:onClick="send"
         android:visibility="invisible"
         android:src="@mipmap/ic_done_white_24dp"
@@ -135,9 +137,8 @@
         android:layout_width="64dip"
         android:layout_height="64dip"
         android:id="@+id/draw"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:onClick="draw"
         android:src="@mipmap/ic_brush_white_24dp"
         app:cb_color="@color/colorBlueButton"/>
@@ -146,10 +147,10 @@
         android:layout_width="64dip"
         android:layout_height="64dip"
         android:id="@+id/undo"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/send"
-        android:layout_toStartOf="@+id/send"
-        android:clickable="false"
+        android:layout_below = "@+id/draw"
+        android:layout_alignParentRight="true"
+        android:clickable="true"
+        android:onClick="undo"
         android:src="@mipmap/ic_undo_white_24dp"
         app:cb_color="#FFBB33"/>
 
@@ -157,10 +158,10 @@
         android:layout_width="64dip"
         android:layout_height="64dip"
         android:id="@+id/erase"
-        android:layout_alignTop="@+id/undo"
-        android:layout_toLeftOf="@+id/undo"
-        android:layout_toStartOf="@+id/undo"
-        android:clickable="false"
+        android:layout_below = "@+id/undo"
+        android:layout_alignParentRight="true"
+        android:clickable="true"
+        android:onClick="erase"
         android:src="@mipmap/ic_backspace_white_24dp"
         app:cb_color="#B71C1C"/>
 
