--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,18 +113,8 @@
     </FrameLayout>
 
     <at.markushi.ui.CircleButton
-        android:layout_width="64dip"
-        android:layout_height="64dip"
-        android:id="@+id/ip"
-        android:layout_above = "@+id/draw"
-        android:layout_alignParentRight="true"
-        android:onClick="setip"
-        android:src="@mipmap/ic_done_white_24dp"
-        app:cb_color="#000000"/>
-
-    <at.markushi.ui.CircleButton
-        android:layout_width="64dip"
-        android:layout_height="64dip"
+        android:layout_width="96dip"
+        android:layout_height="96dip"
         android:id="@+id/send"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
@@ -134,8 +124,8 @@
         app:cb_color="@color/colorGreenButton"/>
 
     <at.markushi.ui.CircleButton
-        android:layout_width="64dip"
-        android:layout_height="64dip"
+        android:layout_width="96dip"
+        android:layout_height="96dip"
         android:id="@+id/draw"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
@@ -164,5 +154,15 @@
         android:onClick="erase"
         android:src="@mipmap/ic_backspace_white_24dp"
         app:cb_color="#B71C1C"/>
+
+    <at.markushi.ui.CircleButton
+        android:layout_width="64dip"
+        android:layout_height="64dip"
+        android:id="@+id/ip"
+        android:layout_below = "@+id/erase"
+        android:layout_alignParentRight="true"
+        android:onClick="setip"
+        android:src="@mipmap/ic_done_white_24dp"
+        app:cb_color="#000000"/>
 
 </RelativeLayout>
