--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,131 +11,12 @@
         android:id="@+id/swleft"
         android:layout_width="200dp"
         android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/rleft"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <ImageView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="left|top"
-        android:layout_alignParentTop="true"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:gravity="center"
-        android:id="@+id/textView1"
-        android:layout_below="@+id/imageView"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView2"
-        android:layout_below="@id/textView1"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView2"
-        android:layout_below="@id/imageView2" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView3"
-        android:layout_below="@id/textView2"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView3"
-        android:layout_below="@id/imageView3" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView4"
-        android:layout_below="@id/textView3"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView4"
-        android:layout_below="@id/imageView4" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView5"
-        android:layout_below="@+id/textView4"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView5"
-        android:layout_below="@id/imageView5" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView7"
-        android:layout_below="@+id/textView5"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/imageView7" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/imageView8"
-        android:layout_below="@+id/textView6"
-        android:onClick="imageClicked"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/imageView8" />
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/scrollLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        </LinearLayout>
     </ScrollView>
 
     <FrameLayout
