--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,6 @@
     android:background="@color/colorWhite"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/ivintro"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/yagmur"
-        android:visibility="visible"
-        />
-
-
     <ScrollView
         android:id="@+id/swleft"
         android:layout_width="200dp"
@@ -37,6 +28,16 @@
         android:paddingRight="5dp"
         android:paddingLeft="5dp"
         android:background="@color/colorWhite">
+
+        <ImageView
+            android:id="@+id/ivintro"
+            android:layout_width="600dp"
+            android:layout_height="300dp"
+            android:src="@drawable/koc"
+            android:visibility="visible"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="150dp"
+            />
 
         <ImageView
             android:layout_width="match_parent"
