--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,6 @@
     android:background="@color/colorWhite"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        />
-
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,6 +16,15 @@
     android:paddingRight="5dp"
     android:paddingLeft="5dp"
     android:background="@color/colorWhite">
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:onClick="drawingModeOn"
+        />
 </FrameLayout>
 
 
